--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              피로생활
-bio:                'Minimal, one column jekyll theme.'
-description:        "Moon is a minimal, one column jekyll theme for your blog."
+bio:                '언제나 똥을 싸지르는 블로거 입니다.'
+description:        "피로생활의 이전 포스팅글 : http://kychul98.tistory.com"
 reading_time:       true
 words_per_minute:   200
 logo:               'assets/img/logo.png'
